# api/types.go
@@ -121,3 +121,8 @@ type ForwardMessagesRequest struct {
 	ToChatID   int64 `json:"to_chat_id" validate:"required" example:"987654321"`    // 目标聊天ID
 	MessageIDs []int `json:"message_ids" validate:"required" example:"123,456,789"` // 消息ID列表
 }
+
+type StreamFileRequest struct {
+	ChatID    int64 `json:"chat_id" validate:"required" example:"123456789"`    // 聊天ID
+	MessageID int   `json:"message_id" validate:"required" example:"987654321"` // 消息ID
+}
